crates/toml_edit/tests/snapshots/invalid/spec-1.1.0/common-46-1.stderr
TOML parse error at line 6, column 14
  |
6 | [fruit.apple.taste]  # INVALID
  |              ^^^^^
duplicate key
